--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -21,7 +21,7 @@
   }
   
   .logo {
-    font-size: 24px;
+    font-size: 30px;
     font-weight: 600;
     z-index: 101;
   }
@@ -31,6 +31,7 @@
     gap: 20px;
     position: absolute;
     right: 40px;
+    padding:2px
   }
   
   .icon {
